re-wrote timer.js, fixed readability issues, implememnted inactivity prompt, added backend request

--- a/tryhard_project/templates/styles.css
+++ b/tryhard_project/templates/styles.css
@@ -37,12 +37,6 @@ button {
     margin: 0 10px;
     cursor: pointer;
 }
-<<<<<<< HEAD
-
-button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-=======
 #prompt-section {
     margin-top: 20px;
 }
@@ -59,5 +53,4 @@ button:disabled {
 
 #prompt-section p {
     color: red;
->>>>>>> 895de1cef8a683642849b346a68e3090469583b1
 }
